manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-app
  labels:
    app: web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: 211125508702.dkr.ecr.us-east-2.amazonaws.com/my-repo:web_app_v1
        ports:
        - containerPort: 8080
