manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-web-app-svc
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
    - port: 80
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 8080
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
